--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-passwordExpiryBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-passwordExpiryBody.vm
@@ -50,7 +50,8 @@
 #set ($paragraphContactUs = ${ctx.messages.getMessage('paragraphContactUs', "#genHtmlLinkStartTag(${ctx.messages.contactUsPage})", "#genHtmlLinkEndTag()", "#genHtmlLink($mailToUrl '#666666' ${ctx.messages.contactUsEmailAddress})")})
 										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.getMessage('salutation',${ctx.displayName})}</b>,</font></p>
 										<p> <!-- <font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.sentenceAlmostDone}&nbsp;&nbsp;
-										</font> --> <!--<font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('passwordExpiry',${ctx.expiryDays})}:&nbsp;<a href="${ctx.secureResetPasswordUrl}"><font color="#666666">${ctx.displaySecureResetPasswordUrl}</font></a> </font></p>-->
+										</font> --> <font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('passwordExpiry',${ctx.expiryDays})}
+										<!--:&nbsp;<a href="${ctx.secureResetPasswordUrl}"><font color="#666666">${ctx.displaySecureResetPasswordUrl}</font></a> </font></p>-->
 										<!--<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('paragraphSecurityNote', ${ctx.expiresInMinutes}, ${ctx.expiresInMinutes})}</font></p>-->
 										<!--<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('paragraphExpiredLink',"#genHtmlLinkStartTag($pswdRequestUrl)", "#genHtmlLinkEndTag()")}</font></p>-->
 										<!-- <p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$paragraphContactUs</font></p> -->
