--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-orderApprovalRejectionBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-orderApprovalRejectionBody.vm
@@ -168,27 +168,6 @@
 										</table>
 										#end
 										<br/>
-										#if(!$ctx.order.b2bPermissionResult.isEmpty())
-										<table width="100%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#bfc1c0">
-											<tr>
-												<td>
-													<table>
-														<!--#foreach($permissionResult in $ctx.order.b2bPermissionResult)
-														<tr>
-															<td width="100%"><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('rejectionDetails', "#genHtmlBoldFont($permissionResult.approver)", "#genHtmlBoldFont($permissionResult.permissionTypeCode)")}</font></td>
-														</tr>
-														#end-->
-														#if(${ctx.order.rejectionComments})
-														<tr>
-															<td width="100%"><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('rejectionDetails', "#genHtmlBoldFont(${ctx.order.rejectionComments})")}</font></td>
-														</tr>
-														#end
-													</table>
-												</td>
-											</tr>
-										</table>
-										#end
-										<br/>
 										<table width="100%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#bfc1c0">
 											<tr>
 												<td>
@@ -214,7 +193,13 @@
 															</td>-->
 															<td>&nbsp;</td>
 															<td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">
+															#if(${ctx.order.deliveryAddress.title})
+																#if(${ctx.order.deliveryAddress.firstName})
+																	#if(${ctx.order.deliveryAddress.lastName})
 																${ctx.order.deliveryAddress.title} ${ctx.order.deliveryAddress.firstName} ${ctx.order.deliveryAddress.lastName}<br/>
+																#end
+																#end
+																#end
 																${ctx.order.deliveryAddress.line1}<br/>
 																#if(${ctx.order.deliveryAddress.line2}) ${ctx.order.deliveryAddress.line2}<br/>#end
 																${ctx.order.deliveryAddress.town}<br/>
@@ -269,7 +254,7 @@
 																		<td valign="top" width="10%">&nbsp;</td>
 																		<td valign="top" width="45%"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.subTotal.formattedValue}</b></font></p></td>
 																	</tr>
-																	<tr>
+																	<!--<tr>
 																		<td valign="top"><p><font color="#414a4f" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.savings}:</b></font></p></td>
 																		<td valign="top">&nbsp;</td>
 																		<td valign="top"><p><font color="#414a4f" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.totalDiscounts.formattedValue}</b></font></p></td>
@@ -278,14 +263,14 @@
 																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.delivery}:</b></font></p></td>
 																		<td valign="top">&nbsp;</td>
 																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>#if(${ctx.order.deliveryCost.value} > 0) ${ctx.order.deliveryCost.formattedValue} #else FREE #end</b></font></p></td>
-																	</tr>
+																	</tr>-->
 																	<tr>
 																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.total}:</b></font></p></td>
 																		<td valign="top">&nbsp;</td>
 																		<td valign="top"><p><font color="#666666" size="3" face="Arial, Helvetica, sans-serif"><b>${ctx.order.totalPrice.formattedValue}</b></font></p></td>
 																	</tr>
 																</table>
-															<!--<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('includesTax', ${ctx.order.totalTax.formattedValue})}</font></p>-->
+																<!--<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('includesTax', ${ctx.order.totalTax.formattedValue})}</font></p>-->
 															</td>
 														</tr>
 													</table>
