--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-orderApprovalRejectionBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-orderApprovalRejectionBody.vm
@@ -1,4 +1,4 @@
-## messageSource=classpath:/energizercore/messages/email-orderApprovalRejection_en.properties
+## messageSource=classpath:/energizercore/messages/email-orderApprovalRejection_$lang.properties
 #macro( genHtmlBoldFont $text )
 <font color="#414a4f" size="2" face="Arial, Helvetica, sans-serif"><b>$text</b></font>
 #end
@@ -167,6 +167,25 @@
 											</tr>
 										</table>
 										#end
+										<br/>
+										
+										<table width="100%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#bfc1c0">
+											<tr>
+												<td>
+													<table>
+														
+														
+															<tr>
+																<td width="100%"><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('rejectionDetails', "#genHtmlBoldFont(${ctx.order.rejectionComments})")}</font></td>
+															</tr>
+															
+														
+													</table>
+												</td>
+											</tr>
+										</table>
+										
+										<br/>
 										<table width="100%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#bfc1c0">
 											<tr>
 												<td>
