--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-quoteOrderApprovalSubject.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-quoteOrderApprovalSubject.vm
@@ -1,1 +1,1 @@
-${ctx.messages.getMessage('emailSubject', ${ctx.order.code})}
+(${ctx.env})${ctx.messages.getMessage('emailSubject', ${ctx.order.code})}
