--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/container.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/container.css
@@ -1,14 +1,18 @@
 body, table {font:10pt verdana;}
 .cntutil_wrapper_cls{float:left;width:100%;border:0px solid;}
+
+#floorSpace_cont{
+	height:300px; width:100px; position:relative;background-color: #ffd799;margin-left:10px;float:left;margin-right:26px;
+}
 #volume_cont{
-    height:300px; width:150px; position:relative;background-color: #ffd799;margin-left:10px;float:left;margin-right:26px;
+    height:300px; width:100px; position:relative;background-color: #ffd799;margin-left:10px;float:left;margin-right:26px;
 }#weight_cont{
-    height:300px; width:150px; position:relative;background-color: #ffd799;float:left;left:10px;top:0px;float:left;
+    height:300px; width:100px; position:relative;background-color: #ffd799;float:left;left:10px;top:0px;float:left;
 }
 #volume_utilization{
-    height: 0px; width:150px; background-color: #33cc33; position:absolute; bottom:0; left:0;
+    height: 0px; width:100px; background-color: #33cc33; position:absolute; bottom:0; left:0;
 }#weight_utilization{
-    height: 0px; width:150px; background-color: #33cc33; position:absolute; bottom:0; left:0;
+    height: 0px; width:100px; background-color: #33cc33; position:absolute; bottom:0; left:0;
 }
 #divider {margin-top:150px;width:100%;position:relative;display:inline-block;border-top:dashed 1px yellow;z-index:1}
 
@@ -23,6 +27,7 @@ body, table {font:10pt verdana;}
 .cnt_utlwilfill_cls{position:relative;top:50px;z-index:101;text-align:center;}
 .fixthis_row_cls{padding-bottom:45px;}
 
+#floorSpace_cont .cnt_utllbl_cls{ top: 317px;}
 /*.cnt_utl_cls{
 	text-transform: uppercase;
 }*/
