--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/container.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/container.css
@@ -2,10 +2,10 @@ body, table {font:10pt verdana;}
 .cntutil_wrapper_cls{float:left;width:100%;border:0px solid;}
 
 #floorSpace_cont{
-	height:300px; width:150px; position:relative;background-color: #ffd799;margin-left:10px;float:left;margin-right:26px;
+	height:150px; width:632px; position:relative;background-color: #ffd799;margin-left:10px;float:left;margin-right:26px;
 }
 #volume_cont{
-    height:300px; width:150px; position:relative;background-color: #ffd799;margin-left:10px;float:left;margin-right:26px;
+    height:300px; width:150px; position:relative;background-color: #ffd799;margin-left:10px;float:left;margin-right:90px;
 }#weight_cont{
     height:300px; width:150px; position:relative;background-color: #ffd799;float:left;left:10px;top:0px;float:left;
 }
@@ -16,9 +16,9 @@ body, table {font:10pt verdana;}
 }
 #divider {margin-top:150px;width:100%;position:relative;display:inline-block;border-top:dashed 1px yellow;z-index:1}
 
-.divider_20{top:0px;left:0px;width:100%;position:absolute;display:inline-block;border-top:dashed 1px red;z-index:1;float:left;width:254%;text-align:right;}
+.divider_20{top:0px;left:0px;width:100%;position:absolute;display:inline-block;border-top:dashed 1px red;z-index:1;float:left;width:285%;text-align:right;}
 
-.divider_40{top:0px;left:0px;width:100%;position:absolute;display:inline-block;border-top:dashed 1px red;z-index:1;width:364%; text-align:right;}
+.divider_40{top:0px;left:0px;width:100%;position:absolute;display:inline-block;border-top:dashed 1px red;z-index:1;width:105%; text-align:right;}
 
 .span_cls{position:relative;top:-9px;left:32px;font-weight: bold;font-size: 1.2em;}
 .cnt_utl_cls{position:relative; width:175px;top:0px;float:left;font-weight: bold;font-size: 1.2em;}
@@ -26,6 +26,7 @@ body, table {font:10pt verdana;}
 .cnt_utlvolfill_cls{position:relative;top:50px;z-index:101;text-align:center;}
 .cnt_utlwilfill_cls{position:relative;top:50px;z-index:101;text-align:center;}
 .fixthis_row_cls{padding-bottom:45px;}
+.cnt_fs_utllbl_cls{position:relative;top:15px;text-align:center;}
 
 #floorSpace_cont .cnt_utllbl_cls{ top: 317px;}
 /*.cnt_utl_cls{
