--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderConfirmationBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderConfirmationBody.vm
@@ -59,7 +59,8 @@
 														<tr>
 															<td width="25%">&nbsp;</td>
 															<!--<td width="18%"><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.customerMaterialId}</b></font></td>-->
-															<!--<td width="18%"><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.erpMaterialId}</b></font></td>-->
+															<td width="18%"><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.erpMaterialId}</b></font></td>
+															<td width="12%"><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.UOM}</b></font>
 															<td width="15%"><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.quantity}</b></font></td>
 															<td width="17%"><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.itemPrice}</b></font></td>
 															<!--<td width="12%"><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.UOM}</b></font></td>-->
@@ -132,7 +133,8 @@
 																</table>
 															</td>
 														<!--	<td valign="middle"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.product.customerMaterialId</font></p></td>-->
-															<!--<td valign="middle"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.product.erpMaterialID</font></p></td>-->
+															<td valign="middle"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.product.erpMaterialID</font></p></td>
+															<td valign="middle"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.product.uom</font>
 															<td valign="middle"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.quantity</font></p></td>
 															<td valign="middle"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.basePrice.formattedValue</font></p></td>
 															<!--<td valign="middle"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.product.uom</font></p></td>-->
@@ -156,7 +158,39 @@
 																	</tr>
 										</table>
 										
-										<table>
+										<table width="60%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#bfc1c0">
+										      <p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.loadingDetails}</b></font></p>         
+										           <table>
+										                <tr>
+										                    <td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.containerHeight} :</b></font></p></td>
+										                               <td valign="top">&nbsp;</td>
+																		#if ($ctx.order.containerHeight)
+																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.containerHeight}</b></font></p></td>
+																		#end
+										                    <td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.fullPallets} :</b></font></p></td>
+										                                <td valign="top">&nbsp;</td>
+																		#if ($ctx.order.totalPalletCount)
+																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.totalPalletCount}</b></font></p></td>
+																		#end
+										                </tr>
+										                
+										                <tr>
+										                    <td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.containerPackingType} :</b></font></p></td>
+										                               <td valign="top">&nbsp;</td>
+																		#if ($ctx.order.containerPackingType)
+																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.containerPackingType}</b></font></p></td>
+																		#end
+										                    <td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.partialPallets} :</b></font></p></td>
+										                               <td valign="top">&nbsp;</td>
+																		#if ($ctx.order.partialPalletCount)
+																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.partialPalletCount}</b></font></p></td>
+																		#end
+										                </tr>
+										                
+										           </table>
+										      <p><font color="blue" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.disclaimer}</b></font></p>
+										</table>
+										<!--<table>
 										
 										                     
 										                     		<tr>
@@ -173,7 +207,7 @@
 																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.containerPackingType}</b></font></p></td>
 																		#end
 																	</tr>
-										</table>
+										</table>-->
 										
 										
 										
